# JCG-TestDataScience-2

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
analisis-exploratorio/: index.html
data/: electricity_transformer.csv
docs/: analisis-exploratorio.ipynb  index.md  instalacion-y-uso.md  seleccion-modelo.ipynb
instalacion-y-uso/: index.html
jcg_testdatascience_2/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
jcg_testdatascience_2/config/: core.py
jcg_testdatascience_2/models/: jcg_testdatascience_2_SCALER_output_v0.0.1.pkl
jcg_testdatascience_2/processing/: data_manager.py
notebooks/: analisis-exploratorio.html  analisis-exploratorio.ipynb  seleccion-modelo.html  seleccion-modelo.ipynb
seleccion-modelo/: index.html
tests/: test_config.py  test_data_manager.py  test_predict.py  test_train.py
